--- a/generators/templates/line_chart/package.json
+++ b/generators/templates/line_chart/package.json
@@ -32,6 +32,7 @@
     "nodemon": "^1.10.2",
     "nunjucks": "^2.4.2",
     "style-loader": "^0.13.1",
+    "uglify-js": "^2.7.5",
     "webpack": "^1.13.2",
     "webpack-dashboard": "^0.1.8",
     "webpack-dev-middleware": "^1.6.1",
