--- a/generators/templates/line_chart/package.json
+++ b/generators/templates/line_chart/package.json
@@ -3,6 +3,8 @@
   "version": "1.0.0",
   "description": "NPR Visuals Graphic",
   "scripts": {
+    "build": "curl http://127.0.0.1:8000/render/",
+    "deploy_stage": "npm build && ./bin/deploy.js --target staging",
     "start": "webpack-dashboard -- nodemon --ignore node_modules/ --ignore 'webpack.*.js' ./server.js",
     "text": "gdrive export -f --mime application/vnd.openxmlformats-officedocument.spreadsheetml.sheet $(cat .google-sheet-id)",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -29,6 +31,7 @@
     "extract-text-webpack-plugin": "^1.0.1",
     "less": "^2.7.1",
     "less-loader": "^2.2.3",
+    "minimist": "^1.2.0",
     "nodemon": "^1.10.2",
     "nunjucks": "^2.4.2",
     "style-loader": "^0.13.1",
